--- a/static/css/picDetail.css
+++ b/static/css/picDetail.css
@@ -136,19 +136,20 @@
 
 #page #detail #frame #description {
     word-wrap: break-word;
-    font-size: 30px;
-    font-weight: 900;
+    font-size: 20px;
+    font-weight: 500;
     text-decoration: none;
     color: black;
+    min-height: 150px;
+    height: auto;
     width: 400px;
-    height: 150px;
     border: 20px solid rgb(255, 255, 255);
 }
 
 #page #detail #frame #title {
     word-wrap: break-word;
-    font-size: 20px;
-    font-weight: 500;
+    font-size: 30px;
+    font-weight: 900;
     text-decoration: none;
     width: 400 px;
     color: black;
@@ -160,13 +161,6 @@
     border: 20px solid rgb(255, 255, 255);
     font-size: 20px;
     font-weight: 500;
-}
-
-#page #detail #frame #comments .commentStyle {
-    background-color: rgb(160, 146, 120);
-    border: 20px solid rgb(255, 255, 255);
-    display: flex;
-    flex-direction: row;
 }
 
 .otherprofile img {
@@ -230,4 +224,48 @@
     opacity: 0.4;
     color: black;
     transform: translate(0px, -8px);
+}
+
+.input-box input {
+    height: 45px;
+    width: 70%;
+    outline: none;
+    font-size: 16px;
+    border-radius: 5px;
+    padding-left: 15px;
+    border: 1px solid #ccc;
+    border-bottom-width: 2px;
+    transition: all 0.3s ease;
+    margin: 15px;
+}
+
+#page #detail #frame .submit-box input {
+    height: 45px;
+    font-family: 'Passion One', cursive;
+    border: 7px solid;
+    border-left: 26px solid;
+    border-right: 26px solid;
+    border-radius: 7px;
+    font-size: 17px;
+    letter-spacing: 0.5px;
+    color: #ffffff;
+    text-decoration: none;
+    background-color: #e23c3c;
+    border-color: #e23c3c;
+    margin: 15px;
+}
+
+.commentInputFormat {
+    display: flex;
+    flex-direction: row;
+}
+
+.commentStyle {
+    word-wrap: break-word;
+    width: auto;
+    height: 20px;
+    font-size: 20px;
+    font-family: 'Passion One', cursive;
+    color: #707070;
+    text-decoration: none;
 }
