added the ability to save posts in folders

--- a/templates/feed/add_to_folder.html
+++ b/templates/feed/add_to_folder.html
@@ -23,7 +23,7 @@
                     <div id="frame">
                         <div id="choose">
                             <span class="input-label">Choose a folder: </span>
-                            {{ form.folder_list }}
+                            {{ form.folder }}
                             {{ form.errors }}
                         </div>
                         <input id="submitbutton"type="submit" value="submit" value="Add to folder">
