angry merge error warning wont go away

--- a/templates/feed/add_folder.html
+++ b/templates/feed/add_folder.html
@@ -24,7 +24,7 @@
                     <div class="input-box">
                         <div class="inputText">
                             <span class="input-box">Whats the folder name?</span>
-                                {{ form.title.errors }}
+                                {{ form.name.errors }}
                                 {{ form.name }}
                         </div>
                     </div>
