--- a/templates/feed/show_folder.html
+++ b/templates/feed/show_folder.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title_block %}
-    {{ name }}'s Folder
+    {{ username }}'s Folder
 {% endblock %}
 
 {% block body_block %}
