minor update to updateProfilehtml

--- a/templates/feed/updateProfile.html
+++ b/templates/feed/updateProfile.html
@@ -33,7 +33,7 @@
                      </div>
                  </div> 
                  <div class = "button">
-                     <input type="button" value="Edit profile" name="submit">
+                     <input type="submit" value="Edit profile" name="submit">
                  </div>
                 </div>
             </div>
