--- a/templates/feed/addPost.html
+++ b/templates/feed/addPost.html
@@ -59,7 +59,7 @@
                     {% endfor %}
                     {% endfor %}
                     <div class="button">
-                        <input id="submitbutton" type="submit" name="submit" value="Post">
+                        <input type="submit" name="submit" value="Post">
                     </div>
                 </div>
             </div>
