unmatched tag in personal page ruining all pages inheriting from it

--- a/templates/feed/personalPage.html
+++ b/templates/feed/personalPage.html
@@ -94,12 +94,10 @@
                             </div>
             </div>
         </div>
-        
-        {% endblock %}
+        {% endblock content-block %}
     {% endif %}
     
     </div>
-</div>
 
 <br><br>
-{% endblock %}
+{% endblock body_block %}
