--- a/templates/feed/login.html
+++ b/templates/feed/login.html
@@ -15,7 +15,7 @@
 
 <body>
     <a href="{% url 'feed:home' %}" id="logo">
-          <img src="{% static 'images/logowhite.png' %}" alt="logo" id="logo_img" />
+          <img src="{% static 'images/logoWhite.png' %}" alt="logo" id="logo_img" />
       </a>
 
     <div class="container">
